added markdown for yearly trends

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -14616,8 +14616,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Yearly Trends in A&E Attendance\n",
+    "Analyzing attendance year over year reveals growth patterns and anomalies."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -15537,7 +15545,7 @@
          }
         },
         "title": {
-         "text": "📈 Yearly A&E Attendance Trends (Improved Visibility)"
+         "text": "📈 Yearly A&E Attendance Trends"
         },
         "xaxis": {
          "anchor": "y",
@@ -15583,7 +15591,7 @@
     "\n",
     "# Create stacked bar chart with enhanced visibility\n",
     "fig = px.bar(yearly_attendance, x=\"year\", y=\"total_a&e_attendances\", \n",
-    "             title=\"📈 Yearly A&E Attendance Trends (Improved Visibility)\",\n",
+    "             title=\"📈 Yearly A&E Attendance Trends\",\n",
     "             labels={\"year\": \"Year\", \"total_a&e_attendances\": \"Total A&E Attendances\"},\n",
     "             color=\"year\", \n",
     "             color_discrete_sequence=custom_colors)\n",
@@ -15592,7 +15600,7 @@
     "fig.update_layout(xaxis_title=\"Year\", \n",
     "                  yaxis_title=\"Total A&E Attendances\",\n",
     "                  template=\"plotly_white\",\n",
-    "                  font=dict(size=14),  # Increase font size for clarity\n",
+    "                  font=dict(size=14),\n",
     "                  legend_title=\"Year\",\n",
     "                  bargap=0.2)\n",
     "\n",
