--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -16100,47 +16100,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🔍 Extreme High Values:\n",
-      "             date  total_a&e_attendances  is_anomaly\n",
-      "11950 2024-05-01              2331010.0           1\n",
-      "11752 2024-03-01              2289703.0           1\n",
-      "12346 2024-10-01              2276363.0           1\n",
-      "10757 2024-12-01              2258452.0           1\n",
-      "11356 2024-07-01              2251330.0           1\n",
-      "12148 2024-11-01              2231080.0           1\n",
-      "5856  2022-12-01              2221234.0           1\n",
-      "11554 2024-06-01              2215640.0           1\n",
-      "9549  2023-05-01              2171767.0           1\n",
-      "10359 2024-04-01              2163149.0           1\n",
-      "\n",
-      "🔍 Extreme Low Values:\n",
-      "           date  total_a&e_attendances  is_anomaly\n",
-      "0   2020-04-01                    0.0           0\n",
-      "108 2020-04-01                    0.0           0\n",
-      "79  2020-04-01                    0.0           0\n",
-      "76  2020-04-01                    0.0           0\n",
-      "94  2020-04-01                    0.0           0\n",
-      "23  2020-04-01                    0.0           0\n",
-      "15  2020-04-01                    0.0           0\n",
-      "8   2020-04-01                    0.0           0\n",
-      "39  2020-04-01                    0.0           0\n",
-      "217 2020-04-01                    0.0           0\n"
+     "ename": "KeyError",
+     "evalue": "'is_anomaly'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/Documents/Final-Year-Project/.venv/lib/python3.9/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'is_anomaly'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[125], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m min_attendance \u001b[38;5;241m=\u001b[39m nhs_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_a&e_attendances\u001b[39m\u001b[38;5;124m\"\u001b[39m]\u001b[38;5;241m.\u001b[39mmin()\n\u001b[1;32m      5\u001b[0m \u001b[38;5;66;03m# Count extreme outliers\u001b[39;00m\n\u001b[0;32m----> 6\u001b[0m high_outliers \u001b[38;5;241m=\u001b[39m nhs_data[\u001b[43mnhs_data\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mis_anomaly\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      7\u001b[0m low_attendance \u001b[38;5;241m=\u001b[39m nhs_data[nhs_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtotal_a&e_attendances\u001b[39m\u001b[38;5;124m\"\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m]\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m]\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m📊 Max Attendance: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmax_attendance\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m, Min Attendance: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmin_attendance\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/Documents/Final-Year-Project/.venv/lib/python3.9/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/Documents/Final-Year-Project/.venv/lib/python3.9/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'is_anomaly'"
      ]
     }
    ],
    "source": [
-    "# Check extreme high values\n",
-    "print(\"🔍 Extreme High Values:\\n\", nhs_data.nlargest(10, \"total_a&e_attendances\")[[\"date\", \"total_a&e_attendances\", \"is_anomaly\"]])\n",
+    "# Get basic extreme value stats\n",
+    "max_attendance = nhs_data[\"total_a&e_attendances\"].max()\n",
+    "min_attendance = nhs_data[\"total_a&e_attendances\"].min()\n",
     "\n",
-    "# Check extreme low values (potential errors)\n",
-    "print(\"\\n🔍 Extreme Low Values:\\n\", nhs_data.nsmallest(10, \"total_a&e_attendances\")[[\"date\", \"total_a&e_attendances\", \"is_anomaly\"]])\n"
+    "# Count extreme outliers\n",
+    "high_outliers = nhs_data[nhs_data[\"is_anomaly\"] == 1].shape[0]\n",
+    "low_attendance = nhs_data[nhs_data[\"total_a&e_attendances\"] == 0].shape[0]\n",
+    "\n",
+    "print(f\"📊 Max Attendance: {max_attendance}, Min Attendance: {min_attendance}\")\n",
+    "print(f\"⚠ {high_outliers} high outliers detected, {low_attendance} zero-attendance records.\")\n"
    ]
   },
   {
