updated predictions to include month

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -16803,14 +16803,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Predictions saved to public/data/predictions.json\n"
+      "✅ Predictions with dates saved to public/data/predictions.json\n"
      ]
     }
    ],
@@ -16825,35 +16825,39 @@
     "mse_rf_reduced = mean_squared_error(y_test, y_pred_rf_reduced)\n",
     "r2_rf_reduced = r2_score(y_test, y_pred_rf_reduced)\n",
     "\n",
-    "# Convert values to standard Python float types\n",
+    "# Convert to native float types\n",
     "mse_rf_reduced = float(mse_rf_reduced)\n",
     "r2_rf_reduced = float(r2_rf_reduced)\n",
     "\n",
-    "# Convert actual vs. predicted values to DataFrame\n",
+    "# ✅ STEP 1: Get the dates for each prediction\n",
+    "# Make sure nhs_data_final[\"date\"] is datetime type\n",
+    "date_series = nhs_data_final.loc[X_test.index, \"date\"].dt.strftime(\"%Y-%m-%d\")\n",
+    "\n",
+    "# ✅ STEP 2: Build the predictions DataFrame with dates\n",
     "predictions_df = pd.DataFrame({\n",
-    "    'Actual': y_test.tolist(),  # ✅ Convert Series to list\n",
-    "    'Predicted': y_pred_rf_reduced.tolist()  # ✅ Convert Series to list\n",
+    "    \"date\": date_series.values,\n",
+    "    \"Actual\": y_test.tolist(),\n",
+    "    \"Predicted\": y_pred_rf_reduced.tolist()\n",
     "})\n",
     "\n",
-    "# Create the final dictionary\n",
+    "# ✅ STEP 3: Reorder columns if you like\n",
+    "predictions_df = predictions_df[[\"date\", \"Actual\", \"Predicted\"]]\n",
+    "\n",
+    "# ✅ STEP 4: Build and save JSON\n",
     "final_data = {\n",
     "    \"predictions\": predictions_df.to_dict(orient=\"records\"),\n",
     "    \"mse\": mse_rf_reduced,\n",
     "    \"r2\": r2_rf_reduced\n",
     "}\n",
     "\n",
-    "# Define output path\n",
     "output_dir = \"public/data\"\n",
     "output_path = os.path.join(output_dir, \"predictions.json\")\n",
-    "\n",
-    "# ✅ Ensure the directory exists\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
     "\n",
-    "# ✅ Save JSON file\n",
     "with open(output_path, \"w\") as f:\n",
-    "    json.dump(final_data, f, indent=4)  # Adds indentation for readability\n",
+    "    json.dump(final_data, f, indent=4)\n",
     "\n",
-    "print(f\"✅ Predictions saved to {output_path}\")\n"
+    "print(f\"✅ Predictions with dates saved to {output_path}\")\n"
    ]
   }
  ],
