fixed predictions to include monthly dates and hospital name

--- a/src/predictions.ipynb
+++ b/src/predictions.ipynb
@@ -16803,14 +16803,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Predictions with dates saved to public/data/predictions.json\n"
+      "✅ Predictions with dates and orgs saved to public/data/predictions.json\n"
      ]
     }
    ],
@@ -16829,21 +16829,20 @@
     "mse_rf_reduced = float(mse_rf_reduced)\n",
     "r2_rf_reduced = float(r2_rf_reduced)\n",
     "\n",
-    "# ✅ STEP 1: Get the dates for each prediction\n",
-    "# Make sure nhs_data_final[\"date\"] is datetime type\n",
-    "date_series = nhs_data_final.loc[X_test.index, \"date\"].dt.strftime(\"%Y-%m-%d\")\n",
+    "# ✅ STEP 1: Copy X_test and attach dates/org info\n",
+    "X_test_with_dates = X_test.copy()\n",
+    "X_test_with_dates[\"date\"] = pd.to_datetime(nhs_data_final.loc[X_test.index, \"date\"])  # 🔥 force datetime\n",
+    "X_test_with_dates[\"org_name\"] = nhs_data_final.loc[X_test.index, \"org_name\"].values\n",
     "\n",
-    "# ✅ STEP 2: Build the predictions DataFrame with dates\n",
+    "# ✅ STEP 2: Create predictions DataFrame\n",
     "predictions_df = pd.DataFrame({\n",
-    "    \"date\": date_series.values,\n",
-    "    \"Actual\": y_test.tolist(),\n",
-    "    \"Predicted\": y_pred_rf_reduced.tolist()\n",
+    "    'date': X_test_with_dates[\"date\"].dt.strftime(\"%Y-%m-%d\"),\n",
+    "    'org_name': X_test_with_dates[\"org_name\"],\n",
+    "    'Actual': y_test.values,\n",
+    "    'Predicted': y_pred_rf_reduced\n",
     "})\n",
     "\n",
-    "# ✅ STEP 3: Reorder columns if you like\n",
-    "predictions_df = predictions_df[[\"date\", \"Actual\", \"Predicted\"]]\n",
-    "\n",
-    "# ✅ STEP 4: Build and save JSON\n",
+    "# ✅ STEP 3: Save to JSON\n",
     "final_data = {\n",
     "    \"predictions\": predictions_df.to_dict(orient=\"records\"),\n",
     "    \"mse\": mse_rf_reduced,\n",
@@ -16857,7 +16856,7 @@
     "with open(output_path, \"w\") as f:\n",
     "    json.dump(final_data, f, indent=4)\n",
     "\n",
-    "print(f\"✅ Predictions with dates saved to {output_path}\")\n"
+    "print(f\"✅ Predictions with dates and orgs saved to {output_path}\")\n"
    ]
   }
  ],
