sorted all files into correct folders in backend

--- a/backend/models/predictions.ipynb
+++ b/backend/models/predictions.ipynb
@@ -16858,6 +16858,76 @@
     "\n",
     "print(f\"✅ Predictions with dates and orgs saved to {output_path}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import json\n",
+    "import os\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "\n",
+    "# Simulated setup from previous code\n",
+    "# We'll simulate with dummy values for existing predictions and model\n",
+    "\n",
+    "# Last known attendance values (simulate with a small example)\n",
+    "last_known_date = pd.to_datetime(\"2024-01-01\")\n",
+    "last_attendance = 12000\n",
+    "rolling_history = [11000, 11500, 12000]  # last 3 known attendances\n",
+    "\n",
+    "# Simulate a trained model and scaler\n",
+    "scaler_reduced = MinMaxScaler()\n",
+    "X_sample = pd.DataFrame({\n",
+    "    \"attendance_lag_1\": rolling_history,\n",
+    "    \"attendance_rolling_avg\": [np.mean(rolling_history)] * 3\n",
+    "})\n",
+    "scaler_reduced.fit(X_sample)\n",
+    "\n",
+    "# Simulate model\n",
+    "model = RandomForestRegressor()\n",
+    "model.fit(scaler_reduced.transform(X_sample), [11500, 11800, 12000])  # dummy target\n",
+    "\n",
+    "# Generate future dates\n",
+    "future_months = pd.date_range(start=last_known_date + pd.DateOffset(months=1), end=\"2026-06-01\", freq=\"MS\")\n",
+    "\n",
+    "# Store predictions\n",
+    "future_predictions = []\n",
+    "\n",
+    "for future_date in future_months:\n",
+    "    month = future_date.month\n",
+    "    year = future_date.year\n",
+    "    season = {12:\"Winter\",1:\"Winter\",2:\"Winter\",3:\"Spring\",4:\"Spring\",5:\"Spring\",6:\"Summer\",\n",
+    "              7:\"Summer\",8:\"Summer\",9:\"Autumn\",10:\"Autumn\",11:\"Autumn\"}[month]\n",
+    "    \n",
+    "    attendance_lag_1 = last_attendance\n",
+    "    attendance_rolling_avg = np.mean(rolling_history[-3:])\n",
+    "\n",
+    "    input_row = pd.DataFrame([{\n",
+    "        \"attendance_lag_1\": attendance_lag_1,\n",
+    "        \"attendance_rolling_avg\": attendance_rolling_avg\n",
+    "    }])\n",
+    "\n",
+    "    input_scaled = scaler_reduced.transform(input_row)\n",
+    "\n",
+    "    predicted_value = model.predict(input_scaled)[0]\n",
+    "\n",
+    "    future_predictions.append({\n",
+    "        \"date\": future_date.strftime(\"%Y-%m-%d\"),\n",
+    "        \"org_name\": \"ALL\",\n",
+    "        \"Actual\": None,\n",
+    "        \"Predicted\": float(predicted_value)\n",
+    "    })\n",
+    "\n",
+    "    last_attendance = predicted_value\n",
+    "    rolling_history.append(predicted_value)\n",
+    "\n",
+    "import ace_tools as tools; tools.display_dataframe_to_user(name=\"Future A&E Predictions (Mid-2026)\", dataframe=pd.DataFrame(future_predictions))\n"
+   ]
   }
  ],
  "metadata": {
