Add A&E visualizations: funnel, regional comparison, updated insights and styles

--- a/backend/models/predictions.ipynb
+++ b/backend/models/predictions.ipynb
@@ -16861,7 +16861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16871,9 +16871,6 @@
     "import os\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
-    "\n",
-    "# Simulated setup from previous code\n",
-    "# We'll simulate with dummy values for existing predictions and model\n",
     "\n",
     "# Last known attendance values (simulate with a small example)\n",
     "last_known_date = pd.to_datetime(\"2024-01-01\")\n",
@@ -16924,9 +16921,7 @@
     "    })\n",
     "\n",
     "    last_attendance = predicted_value\n",
-    "    rolling_history.append(predicted_value)\n",
-    "\n",
-    "import ace_tools as tools; tools.display_dataframe_to_user(name=\"Future A&E Predictions (Mid-2026)\", dataframe=pd.DataFrame(future_predictions))\n"
+    "    rolling_history.append(predicted_value)\n"
    ]
   }
  ],
