--- a/backend/models/predictions.ipynb
+++ b/backend/models/predictions.ipynb
@@ -16803,17 +16803,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No existing predictions file found. Creating new one.\n",
-      "✅ Generated predictions for 5 organizations through 2026\n",
-      "✅ Total predictions: 175\n",
-      "✅ Saved to public/data/predictions.json\n"
+      "✅ Found CSV: /Users/sophieboyle/Documents/Final-Year-Project/backend/models/../raw/nhs_ae_final_for_ml.csv\n",
+      "⚠️ No existing predictions file found. Using fallback org list.\n",
+      "✅ Saved predictions to public/data/predictions.json\n",
+      "📊 Total rows: 21350\n"
      ]
     }
    ],
@@ -16824,147 +16824,112 @@
     "import os\n",
     "import joblib\n",
     "from datetime import datetime\n",
+    "from pathlib import Path\n",
     "\n",
-    "# Load the trained model and scaler\n",
+    "# ------------------------\n",
+    "# Locate the CSV file\n",
+    "# ------------------------\n",
+    "project_dir = Path.cwd()\n",
+    "csv_candidates = list(project_dir.rglob(\"../raw/nhs_ae_final_for_ml.csv\"))\n",
+    "\n",
+    "if csv_candidates:\n",
+    "    csv_path = csv_candidates[0]\n",
+    "    print(f\"✅ Found CSV: {csv_path}\")\n",
+    "    historical_df = pd.read_csv(csv_path)\n",
+    "    historical_df[\"date\"] = pd.to_datetime(historical_df[\"date\"]).dt.strftime(\"%Y-%m-%d\")\n",
+    "else:\n",
+    "    raise FileNotFoundError(\"❌ Could not locate nhs_ae_final_for_ml.csv!\")\n",
+    "\n",
+    "# ------------------------\n",
+    "# Load model and scaler\n",
+    "# ------------------------\n",
     "model = joblib.load(\"random_forest_best_model.pkl\")\n",
     "scaler = joblib.load(\"scaler.pkl\")\n",
     "\n",
-    "# Load your existing predictions to get the organization list\n",
+    "# ------------------------\n",
+    "# Load existing predictions or create fallback list\n",
+    "# ------------------------\n",
     "try:\n",
     "    with open(\"public/data/predictions.json\", \"r\") as f:\n",
     "        existing_predictions = json.load(f)\n",
-    "        \n",
-    "    # Extract performance metrics\n",
     "    mse = existing_predictions[\"mse\"]\n",
     "    r2 = existing_predictions[\"r2\"]\n",
-    "    \n",
-    "    # Get unique organizations from existing data\n",
-    "    organizations = set()\n",
-    "    for pred in existing_predictions[\"predictions\"]:\n",
-    "        organizations.add(pred[\"org_name\"])\n",
-    "    \n",
-    "    print(f\"Found {len(organizations)} unique organizations in existing data\")\n",
+    "    organizations = set(pred[\"org_name\"] for pred in existing_predictions[\"predictions\"])\n",
+    "    print(f\"✅ Found {len(organizations)} orgs from existing predictions\")\n",
     "except FileNotFoundError:\n",
-    "    print(\"No existing predictions file found. Creating new one.\")\n",
-    "    organizations = [\"LIVERPOOL UNIVERSITY HOSPITALS NHS FOUNDATION TRUST\", \n",
-    "                    \"MANCHESTER UNIVERSITY NHS FOUNDATION TRUST\",\n",
-    "                    \"UNIVERSITY HOSPITALS BIRMINGHAM NHS FOUNDATION TRUST\",\n",
-    "                    \"LEEDS TEACHING HOSPITALS NHS TRUST\",\n",
-    "                    \"NEWCASTLE UPON TYNE HOSPITALS NHS FOUNDATION TRUST\"]\n",
-    "    mse = 34400033.75  # Use your actual MSE value\n",
-    "    r2 = 0.58  # Use your actual R² value\n",
+    "    print(\"⚠️ No existing predictions file found. Using fallback org list.\")\n",
+    "    organizations = set(historical_df[\"org_name\"].unique())\n",
+    "    mse = 34400033.75\n",
+    "    r2 = 0.58\n",
     "\n",
-    "# Get the latest prediction for each organization to use as starting point\n",
-    "latest_data = {}\n",
-    "try:\n",
-    "    for org in organizations:\n",
-    "        org_predictions = [p for p in existing_predictions[\"predictions\"] if p[\"org_name\"] == org]\n",
-    "        if org_predictions:\n",
-    "            # Sort by date in descending order\n",
-    "            sorted_preds = sorted(org_predictions, key=lambda x: x[\"date\"], reverse=True)\n",
-    "            latest_data[org] = {\n",
-    "                \"last_date\": pd.to_datetime(sorted_preds[0][\"date\"]),\n",
-    "                \"last_attendance\": sorted_preds[0][\"Predicted\"],\n",
-    "                # Get the last 3 attendances for rolling average\n",
-    "                \"rolling_history\": [p[\"Predicted\"] for p in sorted_preds[:3]]\n",
-    "            }\n",
-    "        else:\n",
-    "            # Default values if no data exists for this organization\n",
-    "            latest_data[org] = {\n",
-    "                \"last_date\": pd.to_datetime(\"2024-01-01\"),\n",
-    "                \"last_attendance\": 15000,  # Default value\n",
-    "                \"rolling_history\": [14500, 14800, 15000]  # Default rolling history\n",
-    "            }\n",
-    "except (KeyError, NameError):\n",
-    "    # If no existing predictions, create defaults\n",
-    "    for org in organizations:\n",
-    "        latest_data[org] = {\n",
-    "            \"last_date\": pd.to_datetime(\"2024-01-01\"),\n",
-    "            \"last_attendance\": 15000,  # Default value\n",
-    "            \"rolling_history\": [14500, 14800, 15000]  # Default rolling history\n",
-    "        }\n",
-    "\n",
-    "# Generate future predictions for each organization through 2026\n",
+    "# ------------------------\n",
+    "# Add historical actuals and generate predictions\n",
+    "# ------------------------\n",
     "all_predictions = []\n",
     "\n",
-    "# Get existing predictions first (if available)\n",
-    "try:\n",
-    "    all_predictions.extend(existing_predictions[\"predictions\"])\n",
-    "except (NameError, KeyError):\n",
-    "    pass\n",
-    "\n",
-    "# Generate future dates from the latest date through 2026\n",
     "for org in organizations:\n",
-    "    org_data = latest_data[org]\n",
-    "    last_date = org_data[\"last_date\"]\n",
-    "    \n",
-    "    # Start from month after the last date\n",
-    "    start_date = last_date + pd.DateOffset(months=1)\n",
-    "    # Go through end of 2026\n",
-    "    end_date = pd.to_datetime(\"2026-12-31\")\n",
-    "    \n",
-    "    future_months = pd.date_range(start=start_date, end=end_date, freq=\"MS\")\n",
-    "    \n",
-    "    # Values for this organization\n",
-    "    last_attendance = org_data[\"last_attendance\"]\n",
-    "    rolling_history = org_data[\"rolling_history\"].copy()\n",
-    "    \n",
-    "    # Generate predictions month by month\n",
+    "    org_actuals = historical_df[historical_df[\"org_name\"].str.upper() == org.upper()]\n",
+    "    org_actuals = org_actuals.sort_values(by=\"date\")\n",
+    "\n",
+    "    # Add historical actuals (up to Jan 2024)\n",
+    "    for _, row in org_actuals.iterrows():\n",
+    "        all_predictions.append({\n",
+    "            \"date\": row[\"date\"],\n",
+    "            \"org_name\": row[\"org_name\"],\n",
+    "            \"Actual\": round(row[\"total_a&e_attendances\"]),\n",
+    "            \"Predicted\": None\n",
+    "        })\n",
+    "\n",
+    "    # Start predicting from Feb 2024\n",
+    "    last_attendance = org_actuals[\"total_a&e_attendances\"].iloc[-1]\n",
+    "    rolling_history = list(org_actuals[\"total_a&e_attendances\"].iloc[-3:])\n",
+    "    last_date = pd.to_datetime(org_actuals[\"date\"].iloc[-1])\n",
+    "\n",
+    "    future_months = pd.date_range(start=last_date + pd.DateOffset(months=1), end=\"2026-12-01\", freq=\"MS\")\n",
+    "\n",
     "    for future_date in future_months:\n",
-    "        # Calculate rolling average\n",
     "        attendance_rolling_avg = np.mean(rolling_history[-3:])\n",
     "        attendance_lag_1 = last_attendance\n",
-    "        \n",
-    "        # Create input features for prediction\n",
+    "\n",
     "        input_row = pd.DataFrame([{\n",
     "            \"attendance_rolling_avg\": attendance_rolling_avg,\n",
     "            \"attendance_lag_1\": attendance_lag_1\n",
     "        }])\n",
-    "        \n",
-    "        # Scale the input features\n",
+    "\n",
     "        input_scaled = scaler.transform(input_row)\n",
-    "        \n",
-    "        # Make prediction\n",
     "        predicted_value = model.predict(input_scaled)[0]\n",
-    "        \n",
-    "        # Add some randomness to make predictions more realistic\n",
-    "        # Vary by up to ±5%\n",
-    "        randomness = 1 + (np.random.random() * 0.1 - 0.05)\n",
-    "        predicted_value = predicted_value * randomness\n",
-    "        \n",
-    "        # Create prediction record\n",
+    "        predicted_value *= 1 + (np.random.random() * 0.1 - 0.05)  # Optional randomness\n",
+    "\n",
     "        all_predictions.append({\n",
     "            \"date\": future_date.strftime(\"%Y-%m-%d\"),\n",
     "            \"org_name\": org,\n",
-    "            \"Actual\": None,  # Future data, so no actual value yet\n",
+    "            \"Actual\": None,\n",
     "            \"Predicted\": round(float(predicted_value))\n",
     "        })\n",
-    "        \n",
-    "        # Update values for next iteration\n",
+    "\n",
     "        last_attendance = predicted_value\n",
     "        rolling_history.append(predicted_value)\n",
-    "        # Keep only the last 3 values\n",
     "        if len(rolling_history) > 3:\n",
     "            rolling_history.pop(0)\n",
     "\n",
-    "# Combine with final data\n",
+    "# ------------------------\n",
+    "# Save predictions\n",
+    "# ------------------------\n",
     "final_data = {\n",
     "    \"predictions\": all_predictions,\n",
     "    \"mse\": mse,\n",
     "    \"r2\": r2\n",
     "}\n",
     "\n",
-    "# Save to JSON\n",
     "output_dir = \"public/data\"\n",
-    "output_path = os.path.join(output_dir, \"predictions.json\")\n",
     "os.makedirs(output_dir, exist_ok=True)\n",
+    "output_path = os.path.join(output_dir, \"predictions.json\")\n",
     "\n",
     "with open(output_path, \"w\") as f:\n",
     "    json.dump(final_data, f, indent=4)\n",
     "\n",
-    "print(f\"✅ Generated predictions for {len(organizations)} organizations through 2026\")\n",
-    "print(f\"✅ Total predictions: {len(all_predictions)}\")\n",
-    "print(f\"✅ Saved to {output_path}\")"
+    "print(f\"✅ Saved predictions to {output_path}\")\n",
+    "print(f\"📊 Total rows: {len(all_predictions)}\")\n"
    ]
   }
  ],
